fix double line text overflow home page

--- a/src/styles/ReviewListItem.scss
+++ b/src/styles/ReviewListItem.scss
@@ -156,8 +156,8 @@
 }
 
 .review-list-description-short {
-  max-height: 42px;
-  height: 42px;
+  max-height: 40px;
+  height: 40px;
   display: -webkit-box;
   margin-left: 2px;
   -webkit-line-clamp: 2;
